--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>E</title>
+  <title>Electro</title>
   <link type="Image/x-icon" href="/favicon.ico" rel="icon">
   <!-- Meta Tags-->
   <meta charset="utf-8" />
